src/components/PrimaryNavigation/index.module.scss
@import '../../styles/variables';

.header {
  position: fixed;
  top: 0;
  width: 100%;
  display: flex;
  align-items: center;
  background-color: $background-color-navigation;
  height: $header-height;
  padding: 0 2rem;
  gap: 8rem;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);

  &__logo {
    height: 3.6rem;
  }
}

.navigation {
  padding: 0 2rem;
  flex: 1;
  &__listing {
    display: flex;
    justify-content: space-between;
  }

  &__link {
    color: $color-white;
    font-weight: $font-weight-medium;
    font-size: 1.3rem;
  }
}

